Kruskal algorithm implementation finished